viewport change event added, slide wrap prev bug resolved

--- a/src/scss/_system/_debug.scss
+++ b/src/scss/_system/_debug.scss
@@ -1,26 +1,29 @@
 /* stylelint-disable */
 
-@if $env == 'development' {
-	body {
-		&:after {
+
+body {
+	&:after {
+		@if $env == 'development' {
 			position: fixed;
 			bottom: 0;
 			left: 0;
 			font-size: 12px;
-			background-color: rgba($black, 0.4);
-			color: $white;
+			background-color: rgba(#000, 0.4);
+			color: #fff;
 			content: 'root';
 			display: block;
 			padding: gutter(0.25);
 			z-index: 100001;
+		} @else {
+			display: none;
 		}
 	}
+}
 
-	@each $break, $key in $breakpoints {
-		@include mq($from: breakpoint($break)) {
-			body::after {
-				content: '#{$break} => (#{$key} | #{mq-px2em($key)})';
-			}
+@each $break, $key in $breakpoints {
+	@include mq($from: breakpoint($break)) {
+		body::after {
+			content: '#{$break}';
 		}
 	}
 }
